--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.10.2",
+    "@clerk/nextjs": "^6.10.3",
     "@clerk/themes": "^2.2.12",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
