--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 WEBHOOK_SECRET=...
 MONGO_URI=mongodb...
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaS...
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dfb...
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=next...
