--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.10.3",
     "@clerk/themes": "^2.2.12",
+    "firebase": "^11.2.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "mongodb": "^6.12.0",
@@ -18,6 +19,7 @@
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^19.0.0",
     "react-quill-new": "^3.3.3",
     "svix": "^1.45.1"
