Complete post page functionality

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ MONGO_URI=mongodb...
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaS...
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dfb...
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=next...
+URL=http://localhost:3000
